# q2-humann3

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
environment-files/: q2-humann-qiime2-tiny-2026.4.yml  q2-humann-qiime2-tiny-dev.yml  q2-humann-qiime2-tiny-release.yml  q2-humann3-qiime2-tiny-2026.4.yml
q2_humann/: __init__.py  _methods.py  _transformers.py  _types_and_formats.py  db.py  plugin_setup.py  run.py  utils.py
q2_humann/tests/: __init__.py  test_db.py  test_integration.py  test_methods.py  test_run.py
q2_humann3/: __init__.py  _types_and_formats.py  citations.bib  db.py  plugin_setup.py  run.py  utils.py
q2_humann3/tests/: test_db.py  test_integration.py  test_run.py
q2_humann3/tests/data/: humann-demo.fastq  sample-a-forward.fastq  sample-a-reverse.fastq  sample-b-forward.fastq
