[project]
name = "q2-humann"
authors = [
    { name = "Michal Ziemski", email = "mziemski@ethz.ch"}
]
description = "QIIME 2 wrapper for HUMANN."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/biobakery/humann"

[project.entry-points.'qiime2.plugins']
"q2-humann" = "q2_humann.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{{base_version}}+{{distance}}.{{vcs}}{{rev}}"
dirty = "{{base_version}}+{{distance}}.{{vcs}}{{rev}}.dirty"
distance-dirty = "{{base_version}}+{{distance}}.{{vcs}}{{rev}}.dirty"

[tool.versioningit.write]
file = "q2_humann/_version.py"

[tool.versioningit]
default-version = "0.0.dev0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_humann*"]

[tool.setuptools.package-data]
q2_humann = ["**/*"]
